get supervisor
