# src/routes/employee.routes.js
@@ -4,5 +4,9 @@ const employeeController = require("../controllers/employee.controller");
 const router = Router();
 
 router.get("/id", employeeController.getEmployeeIdByToken);
+router.get(
+  "/department-manager",
+  employeeController.getDepartmentManagerByEmployee
+);
 
 module.exports = router;
